<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="20sp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context="com.sliit.budgetcalculator.AddRecordActivity">


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:fontFamily="@font/tkodb"
            android:gravity="center_horizontal"
            android:text="@string/AddIncomeorExpense"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/dateadd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:ems="10"
            android:fontFamily="@font/tkodb"
            android:gravity="center_horizontal"
            android:hint="@string/date"
            android:inputType="date"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonChangeDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:fontFamily="@font/tkodb"
            android:text="@string/ChangeDate"
            android:textSize="30sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/incomeRadioBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/tkodb"
                android:onClick="onRadioButtonClicked"
                android:text="@string/Income"
                android:textSize="30sp"
                tools:text="รายรับ" />

            <RadioButton
                android:id="@+id/expenseRadioBtn"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/tkodb"
                android:onClick="onRadioButtonClicked"
                android:text="@string/Expense"
                android:textSize="30sp"
                tools:text="@string/Expense" />
        </RadioGroup>

        <EditText
            android:id="@+id/Amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:ems="10"
            android:gravity="end"
            android:hint="@string/Amount"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:ems="10"
            android:hint="@string/Description"

            android:inputType="text"
            android:textSize="30sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp" />

        <me.gujun.android.taggroup.TagGroup
            android:id="@+id/tag_group"
            style="@style/TagGroup"
            android:layout_gravity="center"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/addNewUserButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/tkodb"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Add"
            android:textColor="#fff"
            android:textSize="30sp" />

    </LinearLayout>

</ScrollView>