<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:rotationX="8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context="com.sliit.budgetcalculator.AddRecordActivity">

        <TextView
            android:id="@+id/titleUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/tkodb"
            android:gravity="center_horizontal"
            android:text="@string/AddIncomeorExpense"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/IE_Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:ems="10"
            android:fontFamily="@font/tkodb"
            android:gravity="center"
            android:hint="@string/date"
            android:inputType="date"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonChangeDateUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/tkodb"
            android:text="@string/ChangeDate"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/IE_Amount_Update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:fontFamily="@font/tkodb"
            android:gravity="end"
            android:hint="@string/Amount"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/IE_Desp_Update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:fontFamily="@font/tkodb"

            android:hint="@string/Description"
            android:inputType="text"
            android:textSize="30sp" />

        <Button
            android:id="@+id/updateUserButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/tkodb"
            android:gravity="center_vertical|center_horizontal"
            android:text="บันทึก"
            android:textColor="#fff"
            android:textSize="30sp" />

    </LinearLayout>
</ScrollView>
