<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTable">

    <TextView
        android:id="@+id/tablec"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/tkodb"
        android:text="@string/tab1"
        android:textColor="#000000"
        android:textSize="18sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/crice"
        android:layout_width="272dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/tkodb"
        android:text="@string/crice"
        android:textColor="#000000"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablec" />

    <Spinner
        android:id="@+id/rice"
        style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:entries="@array/rice_name"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crice" />

    <TextView
        android:id="@+id/cdate"
        android:layout_width="272dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/tkodb"
        android:text="@string/tab12"
        android:textColor="#000000"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rice" />


    <TextView
        android:id="@+id/datepick"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="#FFF2F2"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/tkodb"
        android:text=" เลือกวันที่ต้องการปลูก"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cdate" />


</androidx.constraintlayout.widget.ConstraintLayout>